# ColdRead

./: .gitignore  .venv  AUDIT.md  CLAUDE.md  ColdRead.spec  README.md  launch.bat  launch.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: ColdRead-roadmap.md  HANDOFF.md  PLAN.md  planning_brief.md
samples/: continuous_prose_sample.md  mixed_media_sample.md  multi_voice_drama_sample.md
tests/: test_backend.py  test_cli.py  test_cold_read.py  test_formatter.py  test_parser.py  test_pdf_writer.py  test_preflight.py  test_presets.py  test_toggles.py
vo_format/: __init__.py  backend.py  cache.py  claude_code_backend.py  cli.py  cold_read.py  colors.py  formatter.py  gui.py  gui_main.py  models.py  parser.py  pdf_writer.py  preflight.py  presets.py  preview.py  toggles.py
vo_format/samples/: document_archive_sample.md  single_narrator_sample.md
